<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/primaryDarkColor"
                android:orientation="horizontal"
                android:id="@+id/div_1"
                android:layout_height="@dimen/keyline_11"/>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_5"
                android:layout_marginEnd="@dimen/keyline_5"
                android:layout_marginTop="@dimen/keyline_10"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardElevation="@dimen/keyline_2"
                android:id="@+id/card_view"
                app:contentPadding="@dimen/keyline_3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/please_input_the_id_number_below"
                        android:gravity="center_horizontal"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/keyline_6"
                        android:hint="@string/id_number">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/id_number"
                            android:inputType="number"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/encode"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/submit"
                        android:enabled="false"
                        android:layout_marginTop="@dimen/keyline_6"
                        android:textAllCaps="false"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_margin="@dimen/keyline_3"
                android:layout_below="@+id/card_view"
                android:id="@+id/read_data_container">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data_read_successfully"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/avatar"
                    android:layout_marginTop="@dimen/keyline_2"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_textview"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_marginTop="@dimen/keyline_2"/>
            </LinearLayout>




        </RelativeLayout>
    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anim"
        android:layout_width="@dimen/keyline_12"
        android:layout_height="@dimen/keyline_12"
        android:layout_centerInParent="true"
        app:lottie_fileName="loading.json"
        app:lottie_loop="true"
        android:visibility="gone"
        app:lottie_autoPlay="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/scrim"
        android:gravity="center"
        android:elevation="@dimen/keyline_3"
        android:id="@+id/tap_card_layout"
        android:orientation="vertical"
        android:visibility="gone"
        tools:targetApi="lollipop">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/tap"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:lottie_fileName="tap_card.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_tap_the_card_to_the_back_of_the_phone"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>


    </LinearLayout>

</RelativeLayout>